Shira/force-app/main/default/objects/HoursReport__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>תעריף ש&quot;ע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>