Shira/force-app/main/default/objects/HoursReport__c/fields/Fix__c.field-meta.xml
<CustomField>
    <fullName>Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>נדרש תיקון</label>
    <type>Checkbox</type>
</CustomField>