Shira/force-app/main/default/objects/HoursReport__c/fields/ProjectInHoursReport__c.field-meta.xml
<CustomField>
    <fullName>ProjectInHoursReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פרויקט</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>דיווח שעות</relationshipLabel>
    <relationshipName>ProjectInHoursReport</relationshipName>
    <type>Lookup</type>
</CustomField>