Shira/force-app/main/default/objects/HoursReport__c/fields/ReporterName__c.field-meta.xml
<CustomField>
    <fullName>ReporterName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם מדווח</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>דיווח שעות</relationshipLabel>
    <relationshipName>ReporterName</relationshipName>
    <type>Lookup</type>
</CustomField>