Shira/force-app/main/default/objects/HoursReport__c/fields/WorkingHours__c.field-meta.xml
<CustomField>
    <fullName>WorkingHours__c</fullName>
    <label>מספר ש&quot;ע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>